# libayatana-appindicator-rs

./: .gitignore  Cargo.toml  README.md
bindings/: Cargo.toml  README.md  build.rs
bindings/examples/: hello-rust.rs
bindings/src/: bindings.rs  lib.rs
sys/: Cargo.toml  README.md  ayatana-appindicator3.h  build.rs
sys/src/: lib.rs
