[package]
name = "libayatana-appindicator"
version = "0.1.3"
authors = ["Lewin Probst <info@emirror.de>"]
description = "Rust bindings for libayatana-appindicator shared library."
license = "LGPL-3.0"
homepage = "https://github.com/emirror-de/libayatana-appindicator-rs"
repository = "https://github.com/emirror-de/libayatana-appindicator-rs.git"
readme = "README.md"
keywords = ["bindings"]
edition = "2018"

[dependencies]
log = "^0.4.14"
glib = "^0.10.3"
gtk = "^0.14.0"
gtk-sys = "^0.14.0"
libayatana-appindicator-sys = { path = "../sys", version = "^0.1.3" }
