[package]
name = "libayatana-appindicator"
version = "0.2.0"
authors = ["Lewin Probst <info@emirror.de>"]
description = "Rust bindings for libayatana-appindicator shared library."
license = "LGPL-3.0"
homepage = "https://github.com/emirror-de/libayatana-appindicator-rs"
repository = "https://github.com/emirror-de/libayatana-appindicator-rs.git"
readme = "README.md"
keywords = ["bindings"]
edition = "2018"

[features]
dynamic = ["libayatana-appindicator-sys"]

[dependencies]
log = "^0.4.14"
glib = "^0.15"
gtk = "^0.15.0"
gtk-sys = "^0.15.0"
libayatana-appindicator-sys = { path = "../sys", version = "^0.2", optional = true }
